--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 	"main": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"scripts": {
+		"start": 	"npm run build && node dist/index.js",
 		"lint": "biome check .",
 		"lint:fix": "biome check . --apply-unsafe",
 		"build": "rm -rf dist && tsc",
@@ -45,7 +46,8 @@
 		"prettier-plugin-packagejson": "2.4.12",
 		"tsx": "4.7.1",
 		"typescript": "5.4.3",
-		"vitest": "1.4.0"
+		"vitest": "1.4.0",
+		"viem":"2.8.18"
 	},
 	"packageManager": "bun@1.0.31"
 }
